tests/NormalTests/paczka1/small_fuzzy/99103091.err
Error in line 4: jpl0y A623 44,3
Error in line 9: 5tZm6 S407 5,2
